kube-node-api/kubernetes/node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node
  labels:
    name: node
spec:
  replicas: 1
  selector:
    matchLabels:
      service: node
  template:
    metadata:
      labels:
        service: node
    spec:
      containers:
      - name: node
        image: gcr.io/node-mongo-redis-react/node-service:v0.0.1
      restartPolicy: Always
