kube-node-api/kubernetes/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
  labels:
    service: node
spec:
  type: ClusterIP
  selector:
    service: node
  ports:
    - port: 3000
      targetPort: 3000
