kube-node-api/kubernetes/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    kubernetes.io/ingress.global-static-ip-name: "web-static-ip"

spec:
  tls:
    - hosts:
        - "super-secret-k8s.com"
        - "www.super-secret-k8s.com"
      secretName: super-secret-k8s-com
  rules:
    - host: "super-secret-k8s.com"
      http:
        paths:
          - path: "/?(.*)"
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 3000
    - host: "www.super-secret-k8s.com"
      http:
        paths:
          - path: "/?(.*)"
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 3000
